--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.12.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
